[gd_scene load_steps=7 format=2]

[ext_resource path="res://Logo - Intro - Vídeo/Sampa-Parque-Intro.ogv" type="VideoStream" id=1]
[ext_resource path="res://imagens/Ícones de botão/botão - sair.png" type="Texture" id=2]
[ext_resource path="res://imagens/Ícones de botão/backgroundColorGrass.png" type="Texture" id=3]
[ext_resource path="res://imagens/Ícones de botão/Play e start - botão.png" type="Texture" id=4]
[ext_resource path="res://códigos_gamer/Iniciar.gd" type="Script" id=5]
[ext_resource path="res://códigos_gamer/Sair.gd" type="Script" id=6]

[node name="menu" type="Node2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="VideoPlayer" type="VideoPlayer" parent="AnimationPlayer"]
margin_right = 1080.0
margin_bottom = 720.0
mouse_filter = 2
stream = ExtResource( 1 )
autoplay = true
buffering_msec = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backgroundColorGrass" type="Sprite" parent="."]
position = Vector2( 538.205, 361.985 )
scale = Vector2( 1.04784, 0.699161 )
texture = ExtResource( 3 )

[node name="Iniciar" type="Button" parent="."]
margin_left = 392.0
margin_top = 320.0
margin_right = 640.0
margin_bottom = 384.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Iniciar"]
position = Vector2( 120, 24 )
scale = Vector2( 0.0711729, 0.0642078 )
texture = ExtResource( 4 )
vframes = 2

[node name="Sair" type="Button" parent="."]
margin_left = 408.0
margin_top = 464.0
margin_right = 601.0
margin_bottom = 520.0
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Sair"]
position = Vector2( 104, 24 )
scale = Vector2( 0.057496, 0.0548895 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
modulate = Color( 0.160784, 0.0235294, 0.0235294, 1 )
margin_left = 390.0
margin_top = 126.0
margin_right = 558.0
margin_bottom = 162.0
size_flags_stretch_ratio = 0.0
text = "Sampa Parque Building"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Iniciar" to="Iniciar" method="_on_Iniciar_mouse_entered"]
[connection signal="mouse_exited" from="Iniciar" to="Iniciar" method="_on_Iniciar_mouse_exited"]
[connection signal="pressed" from="Iniciar" to="Iniciar" method="_on_Iniciar_pressed"]
[connection signal="mouse_entered" from="Sair" to="Sair" method="_on_Iniciar_mouse_entered"]
[connection signal="mouse_exited" from="Sair" to="Sair" method="_on_Iniciar_mouse_exited"]
[connection signal="pressed" from="Sair" to="Sair" method="_on_Iniciar_pressed"]
